--- a/package.json
+++ b/package.json
@@ -10,9 +10,26 @@
   "dependencies": {
     "cors": "^2.8.5",
     "next": "9.5.5",
+    "peer": "^0.5.3",
     "peerjs": "^1.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.27.0"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "_app.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KonstantinVVictoria/nextapp.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KonstantinVVictoria/nextapp/issues"
+  },
+  "homepage": "https://github.com/KonstantinVVictoria/nextapp#readme"
 }
